<resources>
    <string name="app_name">COCOMOApp</string>
    <string name="cocomo">COCOMO</string>
    <string name="cocomo2">COCOMO II</string>
    <string name="lg_java">Java</string>
    <string name="lg_C">C</string>
    <string name="lg_cobra">COBRA</string>
    <string name="labelLanguageGroup">Выбор языка</string>
    <string name="lg_Pascal">Pascal</string>
    <string name="lg_Asm">Assembler</string>
    <string name="lg_Cpp">C++</string>
    <string name="lg_Ada">Ada</string>
    <string name="extra_low">Очень низко</string>
    <string name="low">Низко</string>
    <string name="normal">Номиналльно</string>
    <string name="high">Высоко</string>
    <string name="extra_high">Очень высоко</string>
    <string name="labelRalyGroup">Требуемая надежность</string>
    <string name="labelDataGroup">Размер БД</string>
    <string name="labelCplxGroup">Сложность продукта</string>
    <string name="attrPO">Аттрибуты ПП</string>
    <string name="attrComputer">Аттрибуты компьютера</string>
    <string name="labelTimeGroup">Ограничение времени выполнения</string>
    <string name="labelStorGroup">Размер основной памяти</string>
    <string name="labelVirtGroup">Изменчивость ВМ</string>
    <string name="labelTurnGroup">Время реакции компьютера</string>
    <string name="labelVexpGroup">Знание ВМ</string>
    <string name="labelAcapGroup">Способности аналитика</string>
    <string name="labelAexpGroup">Знание приложений</string>
    <string name="labelPcapGroup">Способности программиста</string>
    <string name="labelLexpGroup">Знание ЯП</string>
    <string name="labelModpGroup">Современные методы</string>
    <string name="labelToolGroup">Использование инструментов</string>
    <string name="labelScedGroup">Сроки разработки</string>
    <string name="attrTeam">Аттрибуты команды</string>
    <string name="attrProject">Аттрибуты проекта</string>
    <string name="labelModelGroup">Модель COCOMO</string>
    <string name="model_normal">Обычная</string>
    <string name="model_medium">Промежуточная</string>
    <string name="model_inner">Встроенная</string>
    <string name="cocomoModel">Модель вычислений</string>
    <string name="calculate">Рассчет</string>
    <string name="lg_kobol">Кобол</string>
    <string name="gl_fortran">FORTRAN</string>
    <string name="gl_ada">Ada</string>
    <string name="gl_access">Access</string>
    <string name="gl_delphi">Delphi</string>
    <string name="inputKLOC">Ввод KLOC</string>
</resources>
