<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/labelModelGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/labelModelGroup"
        android:gravity="center_vertical"
        android:layout_margin="@dimen/stdMargin"/>
    <HorizontalScrollView
        android:id="@+id/scrollModelGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@id/labelModelGroup"
        android:padding="5dp">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/groupModel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacing="@dimen/stdMargin"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                android:checked="true"
                android:clickable="false"
                android:text="@string/model_normal"/>
            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                android:text="@string/model_medium"/>
            <com.google.android.material.chip.Chip
                style="@style/ChipStyle"
                android:text="@string/model_inner"/>


        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>
</RelativeLayout>